Fixed spacing

--- a/src/components/SectionHero/SectionHero.module.css
+++ b/src/components/SectionHero/SectionHero.module.css
@@ -223,13 +223,19 @@
   stroke: var(--matterColor);
 }
 
+.stepArrow {
+  margin: auto 0;
+  fill: var(--marketplaceColor);
+  stroke: var(--marketplaceColor);
+}
+
 .unAuthContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   color: var(--matterColorBright);
   position: absolute;
-  top: 8%;
+  top: 9%;
   width: 90%;
   padding: 0 0 5rem 0;
   z-index: 1;
@@ -315,8 +321,9 @@
   composes: heroSubTitleFEDelay;
 
   @media (--viewportMedium) {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     width: 100%;
     justify-items: center;
     margin-top: 1rem;
@@ -350,22 +357,22 @@
   margin-block: 0;
 
   @media (--viewportMedium) {
-    width: 5vw;
-    height: 5vw;
-    min-width: 5vw;
+    width: 4.5vw;
+    height: 4.5vw;
+    min-width: 4.5vw;
     margin-right: 0.75rem;
 
-    font-size: 3vw;
-    line-height: 3vw;
+    font-size: 2.75vw;
+    line-height: 2.75vw;
   }
 
   @media (--viewportLarge) {
-    width: 3vw;
-    height: 3vw;
-    min-width: 3vw;
+    width: 2.5vw;
+    height: 2.5vw;
+    min-width: 2.5vw;
 
-    font-size: 1.75vw;
-    line-height: 1.75vw;
+    font-size: 1.5vw;
+    line-height: 1.5vw;
   }
 }
 
@@ -378,6 +385,7 @@
   padding: 2vw 0;
 
   @media (--viewportLarge) {
+    max-width: 13vw;
     & > h4 {
       font-size: 1vw;
       line-height: 1.5vw;
@@ -389,17 +397,17 @@
   max-width: 10rem;
   max-width: 32.5vw;
 
-  padding-top: 0.5rem;
-  padding-top: 1.5vw;
+  padding-top: 0.3rem;
+  padding-top: 1.1vw;
 
   @media (--viewportMedium) {
-    padding-top: 0.3rem;
-    padding-top: 0.6vw;
+    padding-top: 0.35rem;
+    padding-top: 0.7vw;
   }
 
   @media (--viewportLarge) {
     padding-top: 0.3rem;
-    padding-top: 0.5vw;
+    padding-top: 0.3vw;
   }
 
   & > h2 {
@@ -410,17 +418,19 @@
     margin-bottom: 1.5vw;
 
     @media (--viewportMedium) {
-      font-size: 2rem;
-      font-size: 4vw;
-      line-height: 2rem;
-      line-height: 4vw;
+      font-size: 1.75rem;
+      font-size: 3.25vw;
+      line-height: 1.75rem;
+      line-height: 3.25vw;
+      margin-bottom: 0.35rem;
+      margin-bottom: 0.45vw;
     }
 
     @media (--viewportLarge) {
       font-size: 2rem;
-      font-size: 2.2vw;
+      font-size: 1.9vw;
       line-height: 2rem;
-      line-height: 2.2vw;
+      line-height: 1.9vw;
       margin-bottom: 0.35rem;
       margin-bottom: 0.35vw;
     }
@@ -433,17 +443,17 @@
     margin: 0;
 
     @media (--viewportMedium) {
-      font-size: 1rem;
-      font-size: 4vw;
-      line-height: 1.25rem;
-      line-height: 4vw;
+      font-size: 0.85rem;
+      font-size: 1.6vw;
+      line-height: 1rem;
+      line-height: 1.8vw;
     }
 
-    @media (--viewportMedium) {
+    @media (--viewportLarge) {
       font-size: 0.9rem;
-      font-size: 1.1vw;
+      font-size: 0.85vw;
       line-height: 1.1rem;
-      line-height: 1.2vw;
+      line-height: 1.1vw;
     }
   }
 }
